kube/common/embeddings/embeddings-deplopyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: embeddings
  labels:
    app.kubernetes.io/name: embeddings
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: embeddings
  template:
    metadata:
    
      labels:
        app.kubernetes.io/name: embeddings
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - embeddings
              topologyKey: "kubernetes.io/hostname"
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: embeddings
        image: ghcr.io/huggingface/text-embeddings-inference:1.5
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        args: ["--model-id", "BAAI/bge-m3"]
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN"]
        resources:
          limits:
            nvidia.com/gpu: 1
          requests:
            nvidia.com/gpu: 1
        volumeMounts:
        - name: dshm
          mountPath: /dev/shm
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 5Gi
