kube/common/embeddings/embeddings-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: embeddings-service
  labels:
    app.kubernetes.io/name: embeddings
spec:
  selector:
    app.kubernetes.io/name: embeddings
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 80
    protocol: TCP
