kube/common/embeddings/embeddings-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: embeddings-ingress
  namespace: chunkmydocs
  labels:
    app: embeddings
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: embeddings-service
            port:
              number: 8000
